add .gitmodules and url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,2 @@
-[submodule "react-class-code/formapp/formapp"]
-	url = https://github.com/AtulSinghAtul/formapp.git
+[submodule "react-class-code/routerapp'"]
+	url = https://github.com/AtulSinghAtul/codeHelpMainFolder/tree/main/react-class-code/routerapp.git
