lear authentication and authorization using JASON WEB TOKEN, use middleware to check authentication and authorization

--- a/Backend-Development-using-Express.js/Authentication-App/.env
+++ b/Backend-Development-using-Express.js/Authentication-App/.env
@@ -1,5 +1,5 @@
 PORT: "4000"
 
-MONGODB_URL:"mongodb+srv://atulsrj212108:ibd8O9dkxMK7NOOe@cluster0.ytvhg21.mongodb.net/AuthDatabase"
+MONGODB_URL: "mongodb+srv://atulsingh:n2N0zOIzcZY7Ug15@cluster0.veja4ct.mongodb.net/AuthAppDatabase"
 
-JWT_SECREAT:"babbar"
+JWT_SECRET = babbarCourse
